@@ -21,7 +21,9 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
     <springfox-version>2.6.1</springfox-version>
     <!--Sonar Pros: starts-->
     <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
@@ -30,6 +32,12 @@
     <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
     <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <!--Sonar Pros: ends-->
+    <lombok.version>1.18.6</lombok.version>
+    <httpclient.version>4.5.4</httpclient.version>
+    <commons-cli.version>1.4</commons-cli.version>
+    <commons-io.version>1.3.2</commons-io.version>
+    <spring-boot-admin-starter-client.version>1.4.5</spring-boot-admin-starter-client.version>
+    <hamcrest-all.version>1.3</hamcrest-all.version>
   </properties>
 
   <dependencies>
@@ -79,13 +87,13 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.4</version>
+      <version>${httpclient.version}</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.16.18</version>
-      <optional>true</optional>
+      <version>${lombok.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.ehcache</groupId>
@@ -94,30 +102,33 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
+      <version>20180813</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.9.8</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+      <version>2.9.8</version>
     </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
-      <version>1.3.1</version>
+      <version>${commons-cli.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
+      <version>${commons-io.version}</version>
     </dependency>
 
     <dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-client</artifactId>
-      <version>1.4.5</version>
+      <version>${spring-boot-admin-starter-client.version}</version>
     </dependency>
 
     <!-- Test -->
@@ -129,7 +140,7 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
+      <version>${hamcrest-all.version}</version>
       <scope>test</scope>
     </dependency>
     <!--Runtime, for Embedded Elasticsearch Engine-->
@@ -154,6 +165,15 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <source>${maven.compiler.source}</source>
+          <target>${maven.compiler.target}</target>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
@@ -163,6 +183,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <!--Extra memory to prevent jvm crash during heavy Integration/unit test-->
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
           <classpathDependencyExcludes>
             <classpathDependencyExclude>org.springframework.cloud:spring-cloud-context</classpathDependencyExclude>
           </classpathDependencyExcludes>
